2008-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/shmdr/dump.c, libchip/shmdr/init.c, libchip/shmdr/send.c,
	libchip/shmdr/shm_driver.h: Cleanup and remove variables which
	duplicated data.

2008-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* optman/sapi/no-ext.c, optman/sapi/no-io.c: Convert SAPI manager and
	SuperCore Handler initialization routines to directly pull parameters
	from configuration table.

2008-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* optman/rtems/no-barrier.c, optman/rtems/no-dpmem.c,
	optman/rtems/no-event.c, optman/rtems/no-mp.c, optman/rtems/no-msg.c,
	optman/rtems/no-part.c, optman/rtems/no-region.c,
	optman/rtems/no-rtmon.c, optman/rtems/no-sem.c,
	optman/rtems/no-signal.c, optman/rtems/no-timer.c: Convert manager
	initialization routines to directly pull parameters from
	configuration table. Eliminate empty routines sportted.

2008-12-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/ns16550.c: Add CVS-Id. Fix #define mess.

2008-12-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/i82586.c, libchip/network/smc91111config.h: Eliminate
	all public use of TOD conversion routines.

2008-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/smc91111config.h: 
	#include <stdint.h> instead of <rtems/stdint.h>.

2008-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/prog-cc.m4: Use -r instead of -Wl,-r to build *.rels.
	* aclocal/rtems-cpu-subdirs.m4: Remove obsolete cpus.

2008-12-04	Jukka Pietarinen <jukka.pietarinen@mrf.fi>

	* aclocal/rtems-cpu-subdirs.m4: Add Lattice Mico32 support.

2008-11-13	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/ns16550.c: Transmit the character in the polled write
	function within a critical section for printk() compatibility.

2008-10-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/i2c/spi-sd-card.c: Update for status-checks.h changes.
